<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/login_background"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="150dp"
            android:src="@drawable/icon_account_cirlce" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/loginusernamehint"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="18sp"
            android:background="@drawable/login_username_round"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:id="@+id/username1"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/loginhintpassword"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="16sp"
            android:background="@drawable/login_username_round"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:inputType="textPassword"
            android:padding="10dp"
            android:id="@+id/password1"
            />

        <Button
            android:id="@+id/button1"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#023047"
            android:padding="10dp"
            android:text="@string/loginbutton"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/loginsignup"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"


            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            >

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="70dp"
                android:layout_height="56dp"
                android:layout_margin="20dp"
                android:layout_weight="2"
                android:src="@drawable/fb" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="62dp"
                android:layout_height="59dp"
                android:layout_margin="20dp"
                android:layout_weight="2"
                android:src="@drawable/linkdin" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="62dp"
                android:layout_height="59dp"
                android:layout_margin="20dp"
                android:layout_marginStart="50dp"
                android:layout_weight="2"
                android:src="@drawable/gmail" />
        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>