<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity">

    <ScrollView
        android:layout_width="430dp"
        android:layout_height="914dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="434dp"
                android:scaleType="fitXY"
                android:src="@drawable/intro" />

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/languages"
                tools:layout_editor_absoluteY="200dp"
                android:layout_gravity="end"
                android:layout_marginEnd="50dp"
                />

            <TextView
                android:id="@+id/textView"
                android:layout_width="401dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="50dp"
                android:text="@string/getstartedwelcome"
                android:textAlignment="center"
                android:textColor="#E9ECEF"
                android:textSize="40dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="379dp"
                android:layout_height="57dp"
                android:layout_marginStart="27dp"
                android:layout_marginTop="17dp"
                android:layout_marginBottom="30dp"

                android:fontFamily="@font/nice2"
                android:text="@string/getstarteddesc"
                android:textAlignment="center"
                android:textColor="#0FDDAF"
                android:textSize="12dp"
                android:textStyle="bold" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/intro_background">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/getstartedtitle"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <ImageButton
                    android:id="@+id/imageButtonHome"
                    android:layout_width="53dp"
                    android:layout_height="51dp"

                    android:layout_marginTop="8dp"

                    android:layout_marginEnd="2dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/arrow"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/textView3"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>